--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "eyecare",
   "productName": "Eye Care",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Take care of your eye health",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "publish": "electron-forge publish"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.6.1",
@@ -24,13 +23,9 @@
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "css-loader": "^6.0.0",
     "electron": "34.1.1",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
     "style-loader": "^3.0.0",
