--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
     "@electron-forge/plugin-fuses": "^7.6.1",
     "@electron-forge/plugin-webpack": "^7.6.1",
     "@electron/fuses": "^1.8.0",
+    "@tailwindcss/postcss": "^4.0.5",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "autoprefixer": "^10.4.20",
     "css-loader": "^6.0.0",
     "electron": "34.1.1",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
+    "postcss": "^8.5.1",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.1.3",
     "style-loader": "^3.0.0",
+    "tailwindcss": "^4.0.5",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4"
