--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.3",
+    "prettier": "^3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "style-loader": "^3.0.0",
     "tailwindcss": "^4.0.5",
     "ts-loader": "^9.2.2",
@@ -47,8 +49,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fontsource-variable/josefin-sans": "^5.1.1",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   }
 }
