--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-router": "^7.1.5"
   }
 }
