Changed name from Eye Care to Vision Guard

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eyecare",
-  "productName": "Eye Care",
+  "name": "visionguard",
+  "productName": "Vision Guard",
   "version": "1.0.0",
-  "description": "Take care of your eye health",
+  "description": "Take care of your eyes",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
